--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "puppeteer": "^22.1.0",
+        "whatsapp-web.js": "^1.23.0"
     }
 }
