--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Andreracodex\\Tripay\\": "packages/andreracodex/tripay/"
         },
         "files": [
             "app/Http/Helpers/CustomHelper.php"
